message recording in scripts